--- a/sobre.html
+++ b/sobre.html
@@ -43,7 +43,7 @@
 
       <!-- Menu Desktop -->
       <nav id="menu" class="hidden md:flex space-x-4">
-        <a href="./main.html" class="hover:text-teal-500 dark:hover:text-teal-400">Inicio</a>
+        <a href="./index.html" class="hover:text-teal-500 dark:hover:text-teal-400">Inicio</a>
         
         <a href="./contato.html" class="hover:text-teal-500 dark:hover:text-teal-400">Contato</a>
       </nav>
@@ -51,7 +51,7 @@
 
     <!-- Menu Mobile Expandido -->
     <div id="mobile-menu" class="md:hidden hidden px-6 pb-4 space-y-2 bg-white/90 dark:bg-gray-900/90">
-      <a href="./main.html" class="block hover:text-teal-500 dark:hover:text-teal-400">Inicio</a>
+      <a href="./index.html" class="block hover:text-teal-500 dark:hover:text-teal-400">Inicio</a>
       
       <a href="./contato.html" class="block hover:text-teal-500 dark:hover:text-teal-400">Contato</a>
     </div>
